<resources>
    <string name="app_name">RoomDb</string>
    <string name="location_database_test">Location Database Test</string>
    <string name="latitude">Latitude</string>
    <string name="default_latitude">45.000</string>
    <string name="longitude">Longitude</string>
    <string name="default_longitude">-75.000</string>
    <string name="label">Label</string>
    <string name="home">Home</string>
    <string name="save_location">Save Location</string>
</resources>